Add firebase-config.js script reference to HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplicación de Salud Escolar</title>
-    
+
+        <script src="firebase-config.js"></script>
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#6366f1">
@@ -1893,3 +1894,4 @@
 </body>
 
 </html>
+
